# scarab

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  generate.go  go.mod  go.sum  http.go  main.go  scarab.go  storage.go  storage_leveldb.go  storage_leveldb_test.go
cmd/generic/: BUILD.bazel  generic.go
js/: BUILD  app.js  components.js  package.json  remote.js
proto/common/: BUILD.bazel  common.proto
proto/generic/: BUILD.bazel  generic.proto
proto/state/: state.proto
proto/storage/: BUILD.bazel  storage.proto
templates/: BUILD  BUILD.bazel  base.html  generate.go  job.html  root.html
