load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generic.go"],
    importpath = "github.com/q3k/scarab/cmd/generic",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//proto/common:go_default_library",
        "//proto/generic:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "generic",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
