load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@build_stack_rules_proto//:compile.bzl", stackb_proto_compile = "proto_compile")

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/q3k/scarab/proto/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":common_go_proto"],
    importpath = "github.com/q3k/scarab/proto/common",
    visibility = ["//visibility:public"],
)

stackb_proto_compile(
    name = "common_js_proto",
    plugins = [
        "@build_stack_rules_proto//node:js",
        "@build_stack_rules_proto//github.com/grpc/grpc-web:commonjs",
    ],
    deps = [":common_proto"],
    visibility = ["//visibility:public"],
)
