load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "generic_proto",
    srcs = ["generic.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_proto"],
)

go_proto_library(
    name = "generic_go_proto",
    importpath = "github.com/q3k/scarab/proto/generic",
    proto = ":generic_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":generic_go_proto"],
    importpath = "github.com/q3k/scarab/proto/generic",
    visibility = ["//visibility:public"],
)
