load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "storage_proto",
    srcs = ["storage.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_proto"],
)

go_proto_library(
    name = "storage_go_proto",
    importpath = "github.com/q3k/scarab/proto/storage",
    proto = ":storage_proto",
    deps = ["//proto/common:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":storage_go_proto"],
    importpath = "github.com/q3k/scarab/proto/storage",
    visibility = ["//:__pkg__"],
)
